<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mm"
    android:gravity="center"
    android:padding="@dimen/padding_horizontal_L"
    tools:context="com.jkvillavo12dev.lcpestournaments.fragments.registro.RegistroNombreFragment">

    <TextView
        android:id="@+id/registroNombre_textView"
        style="@style/mw"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin_vertical_L"
        android:text="@string/registroNombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registroNombre_textInputLayoutNombres"
        style="@style/mw"
        android:layout_below="@id/registroNombre_textView"
        android:layout_marginBottom="@dimen/margin_vertical_S">

        <EditText
            android:id="@+id/registroNombre_editTextNombres"
            style="@style/mw"
            android:hint="@string/registroNombres"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registroNombre_textInputLayoutApellidos"
        style="@style/mw"
        android:layout_below="@id/registroNombre_textInputLayoutNombres">

        <EditText
            android:id="@+id/registroNombre_editTextApellidos"
            style="@style/mw"
            android:hint="@string/registroApellidos"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
