<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mm"
    android:gravity="center"
    android:padding="@dimen/padding_horizontal_L"
    tools:context="com.jkvillavo12dev.lcpestournaments.fragments.registro.RegistroPasswordFragment">

    <TextView
        android:id="@+id/registroPassword_textView"
        style="@style/mw"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin_vertical_L"
        android:text="@string/registroPasswordText"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registroPassword_textInputLayoutNombres"
        style="@style/mw"
        android:layout_below="@id/registroPassword_textView"
        android:layout_marginBottom="@dimen/margin_vertical_S"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/registroPassword_editTextNombres"
            style="@style/mw"
            android:hint="@string/registroPassword"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registroPassword_textInputLayoutApellidos"
        style="@style/mw"
        android:layout_below="@id/registroPassword_textInputLayoutNombres"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/registroPassword_editTextApellidos"
            style="@style/mw"
            android:hint="@string/registroConfirmaPassword"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
