<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mm.vert"
    android:background="@color/greyPrimary_light50">

    <LinearLayout
        android:id="@+id/fragmentRegistroFinish_linearBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_vertical_M"
        android:layout_marginTop="@dimen/margin_vertical_M"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/mw"
            android:layout_marginLeft="@dimen/margin_horizontal_L"
            android:layout_marginRight="@dimen/margin_horizontal_L"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/registroFinish_titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/primary_text" />

        <TextView
            style="@style/mw"
            android:layout_marginBottom="@dimen/margin_vertical_S"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="@dimen/margin_vertical_S"
            android:gravity="center_horizontal|center_vertical"
            android:lines="4"
            android:text="@string/registroFinish_texto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text" />

        <Button
            style="@style/ww"
            android:background="@drawable/selector_accent"
            android:text="@string/inicio_ingresar"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorWhitePrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragmentRegistroFinish_linearBottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/greyPrimary_light50"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            style="@style/mw"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_horizontal_M"
            card_view:cardCornerRadius="@dimen/radiusS"
            card_view:cardElevation="@dimen/elevation_L"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/fragmentRegistroFinish_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>
